<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>org.jeasy</groupId>
    <artifactId>easy-random</artifactId>
    <version>4.0.0.RC2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Easy Random</name>
    <description>Easy Random is a library to generate random Java beans</description>
    <url>https://github.com/j-easy/easy-random</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <lombok.version>1.18.4</lombok.version>
        <junit.version>5.4.2</junit.version>
        <faker.version>0.17.2</faker.version>
        <assertj.version>3.12.2</assertj.version>
        <validation-api.version>2.0.1.Final</validation-api.version>
        <objenesis.version>3.0.1</objenesis.version>
        <classgraph.version>4.8.29</classgraph.version>
        <hibernate-validator.version>6.0.16.Final</hibernate-validator.version>
        <javax.el.version>3.0.0</javax.el.version>
        <jackson.version>2.9.8</jackson.version>
        <mockito.version>2.27.0</mockito.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-cobertura-plugin.version>2.7</maven-cobertura-plugin.version>
        <maven-coveralls-plugin.version>4.3.0</maven-coveralls-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-license-plugin.version>3.0</maven-license-plugin.version>
    </properties>

    <modules>
        <module>easy-random-core</module>
        <module>easy-random-bean-validation</module>
        <module>easy-random-randomizers</module>
    </modules>

    <scm>
        <url>git@github.com:j-easy/easy-random.git</url>
        <connection>scm:git:git@github.com:j-easy/easy-random.git</connection>
        <developerConnection>scm:git:git@github.com:j-easy/easy-random.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <ciManagement>
        <system>Travis CI</system>
        <url>https://travis-ci.org/j-easy/easy-random</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/j-easy/easy-random/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>benas</id>
            <name>Mahmoud Ben Hassine</name>
            <url>http://benas.github.io</url>
            <email>mahmoud.benhassine@icloud.com</email>
            <roles>
                <role>Lead developer</role>
            </roles>
        </developer>
        <developer>
            <id>PascalSchumacher</id>
            <name>Pascal Schumacher</name>
            <url>https://github.com/PascalSchumacher</url>
            <roles>
                <role>Core developer</role>
            </roles>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Adriano Machado</name>
            <url>https://github.com/ammachado</url>
        </contributor>
        <contributor>
            <name>Alberto Lagna</name>
            <url>https://github.com/alagna</url>
        </contributor>
        <contributor>
            <name>Andrew Neal</name>
            <url>https://github.com/aeneal</url>
        </contributor>
        <contributor>
            <name>Dovid Kopel</name>
            <url>https://github.com/dovidkopel</url>
        </contributor>
        <contributor>
            <name>Eric Taix</name>
            <url>https://github.com/eric-taix</url>
        </contributor>
        <contributor>
            <name>euZebe</name>
            <url>https://github.com/euzebe</url>
        </contributor>
        <contributor>
            <name>Fred Eckertson</name>
            <url>https://github.com/feckertson</url>
        </contributor>
        <contributor>
            <name>huningd</name>
            <url>https://github.com/huningd</url>
        </contributor>
        <contributor>
            <name>Jose Manuel Prieto</name>
            <url>https://github.com/prietopa</url>
        </contributor>
        <contributor>
            <name>kermit-the-frog</name>
            <url>https://github.com/kermit-the-frog</url>
        </contributor>
        <contributor>
            <name>Lucas Andersson</name>
            <url>https://github.com/LucasAndersson</url>
        </contributor>
        <contributor>
            <name>Nikola Milivojevic</name>
            <url>https://github.com/dziga</url>
        </contributor>
        <contributor>
            <name>Oleksandr Shcherbyna</name>
            <url>https://github.com/sansherbina</url>
        </contributor>
        <contributor>
            <name>Petromir Dzhunev</name>
            <url>https://github.com/petromir</url>
        </contributor>
        <contributor>
            <name>Rebecca McQuary</name>
            <url>https://github.com/rmcquary</url>
        </contributor>
        <contributor>
            <name>Rémi Alvergnat</name>
            <url>http://www.pragmasphere.com</url>
        </contributor>
        <contributor>
            <name>Rodrigue Alcazar</name>
            <url>https://github.com/rodriguealcazar</url>
        </contributor>
        <contributor>
            <name>Ryan Dunckel</name>
            <url>https://github.com/sparty02</url>
        </contributor>
        <contributor>
            <name>Sam Van Overmeire</name>
            <url>https://github.com/VanOvermeire</url>
        </contributor>
        <contributor>
            <name>Valters Vingolds</name>
            <url>https://github.com/valters</url>
        </contributor>
        <contributor>
            <name>Vincent Potucek</name>
            <url>https://github.com/punkratz312</url>
        </contributor>
        <contributor>
            <name>Weronika Redlarska</name>
            <url>https://github.com/weronika-redlarska</url>
        </contributor>
    </contributors>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jeasy</groupId>
                <artifactId>easy-random-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jeasy</groupId>
                <artifactId>easy-random-randomizers</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>${validation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>${objenesis.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>${classgraph.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.el</artifactId>
                <version>${javax.el.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.javafaker</groupId>
                <artifactId>javafaker</artifactId>
                <version>${faker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <verbose>true</verbose>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-verbose</arg>
                            <arg>-Xlint:unchecked</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <includes>
                            <include>**/*Test*.java</include>
                        </includes>
                        <reportFormat>html</reportFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eluder.coveralls</groupId>
                    <artifactId>coveralls-maven-plugin</artifactId>
                    <version>${maven-coveralls-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>cobertura-maven-plugin</artifactId>
                    <version>${maven-cobertura-plugin.version}</version>
                    <configuration>
                        <format>xml</format>
                        <maxmem>256m</maxmem>
                        <aggregate>true</aggregate>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${maven-license-plugin.version}</version>
                <configuration>
                    <header>licence-header-template.txt</header>
                    <properties>
                        <currentYear>2019</currentYear>
                    </properties>
                    <strictCheck>true</strictCheck>
                    <includes>
                        <include>src/**/*.java</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java9+</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler-plugin.version}</version>
                        <configuration>
                            <verbose>true</verbose>
                            <source>${java.version}</source>
                            <target>${java.version}</target>
                            <showWarnings>true</showWarnings>
                            <fork>true</fork>
                            <compilerArgs>
                                <arg>-verbose</arg>
                                <arg>-Xlint:unchecked</arg>
                                <arg>-J--illegal-access=permit</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
